Center layout: align fixed sidebar with main column; unify page-edge inset
Made-with: Cursor

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -30,7 +30,7 @@
     margin-right: auto;
     margin-top: 1em;
     max-width: 100%;
-    padding: 0 1em 1em;
+    padding: 0 $page-edge-inset 1em;
 
     @include layout-max-width;
   }
