--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -22,6 +22,10 @@
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
     padding-top: $masthead-height;
+    /* Align with centered #main (same as its left inner edge) */
+    left: unquote("calc(#{$page-edge-inset} + max(0px, (100vw - #{$content-max-width-lg}) / 2))");
+    right: auto;
+    box-sizing: border-box;
   }
 
   @include breakpoint($large) {
@@ -41,6 +45,10 @@
   @include breakpoint($x-large) {
     max-width: $sidebar-link-max-width;
     padding-right: 1.25rem;
+
+    @media screen and (min-width: $sidebar-screen-min-width) {
+      left: unquote("calc(#{$page-edge-inset} + max(0px, (100vw - #{$content-max-width-xl}) / 2))");
+    }
   }
 
   h2, h3, h4, h5, h6 {
